--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,1 +1,5 @@
 # Change Log for Driving Simulator
+## 2020-08-03
+### Added
+- A car in the form of a yellow rectnagle which can be moved and turned around
+- Inability for car to move outside of window
